@@ -1,6 +1,7 @@
 --------------------------------------------------------------------------------
  Fusion 1.212 - June 30th, 2004
 --------------------------------------------------------------------------------
+- 06-29-04: Added Athena @jobchange command to ALBGM. [Trihan]
 - 06-29-04: Fixed JCon Account Delete to also delete Characters, Parties, Guilds. [AlexKreuz]
 - 06-29-04: Added Athena @kill command to ALBGM. [Trihan]
 - 06-29-04: Added Athena @alive command to ALBGM. [Trihan]
